--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     </header>
 
     <main>
+        <!-- INÍCIO: CHAMADA -->
         <section class="chamada container">
             <h1 class="chamada__titulo">Aplicativos Na Medida</h1>
             <p class="chamada__texto">Apeperia tem um jeito inovador de comparar e montar aplicativos para pequenas e
@@ -49,6 +50,7 @@
             <a class="chamada__botao botao" href="#">Conheça os planos</a>
         </section>
 
+        <!-- INÍCIO: DESTAQUES -->
         <section class="destaques container">
             <h2 class="destaques__titulo">Destaques</h2>
 
@@ -75,6 +77,7 @@
             <a href="#" class="destaques__botao botao">Receber destaques por email</a>
         </section>
 
+        <!-- INÍCIO: DIFERENCIAIS -->
         <section class="diferenciais container">
             <ul class="diferenciais__lista">
                 <li class="diferenciais__item diferenciais__item--tempo">
@@ -95,6 +98,7 @@
             </ul>
         </section>
 
+        <!-- INÍCIO: SOBRE -->
         <section class="sobre container">
             <div class="sobre__conteudo">
                 <h2 class="sobre__titulo">Sobre</h2>
@@ -116,9 +120,9 @@
                 </ul>
                 <p class="sobre__texto">Desenvolvemos aplicativos para todas as plataformas</p>
             </div>
-            <img src="img/sobre-apeperia.png" alt="Sobre a Apeperia" class="sobre__imagem">
         </section>
 
+        <!-- INÍCIO: PLANOS -->
         <section class="planos container">
             <h2 class="planos__titulo">Planos</h2>
             <ul class="planos__cartoes">
@@ -156,12 +160,14 @@
             </ul>
         </section>
 
+        <!-- INÍCIO: CONTATO -->
         <section class="contato container">
             <h2 class="contato__titulo">Contato</h2>
             <p>Entre em contato com a gente</p>
             <a href="contato.html" class="contato__botao botao">Entre em contato</a>
         </section>
 
+        <!-- INÍCIO: INSTITUCIONAL -->
         <section class="institucional container">
             <h2 class="institucional__titulo">Institucional</h2>
             <p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
