all: atualização parcial do layout para desktop

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     nosso serviço e a manutenção já está inclusa. Assim, você não se preocupa com manutenção, é tudo por
                     nossa conta.
                 </p>
-                <p class="sobre__texto sobre__texto--destaque sobre__texto--divisao">
+                <p class="sobre__texto sobre__texto--destaque sobre__conteudo--divisao">
                     Conte com uma equipe especializada e exclusiva pra projetos incríveis em qualquer plataforma.
                 </p>
                 <ul class="sobre__plataformas">
@@ -120,6 +120,7 @@
                 </ul>
                 <p class="sobre__texto">Desenvolvemos aplicativos para todas as plataformas</p>
             </div>
+            <img src="img/sobre-apeperia.png" alt="Sobre a Apeperia" class="sobre__imagem">
         </section>
 
         <!-- INÍCIO: PLANOS -->
