--- a/index.html
+++ b/index.html
@@ -171,19 +171,25 @@
         <!-- INÍCIO: INSTITUCIONAL -->
         <section class="institucional container">
             <h2 class="institucional__titulo">Institucional</h2>
-            <p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
-            <address class="institucional__endereco">
-                Rua Vergueiro, 3185<br>Vila Mariana, São Paulo
-                <article class="institucional__contato">
-                    <p>
-                        <a href="tel:+5592985878449" class="institucional__contato-telefone">(11) 5571-2751 ou</a>
+            <div class="institucional__conteudo">
+                <div class="institucional__informacoes">
+                    <p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
+                    <address class="institucional__endereco">
+                        Rua Vergueiro, 3185<br>Vila Mariana, São Paulo
+                        <article class="institucional__contato">
+                            <p>
+                                <a href="tel:+5592985878449" class="institucional__contato-telefone">(11) 5571-2751
+                                    ou</a>
 
-                        <a href="mailto:elian.19batista@gmail.com" class="institucional__contato-email">contato@apeperia.com</a>
-                    </p>
-                </article>
-            </address>
+                                <a href="mailto:elian.19batista@gmail.com"
+                                    class="institucional__contato-email">contato@apeperia.com</a>
+                            </p>
+                        </article>
+                    </address>
+                </div>
 
-            <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
+                <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
+            </div>
 
         </section>
     </main>
